--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,31 +1,105 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.26.1'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'com.apollographql.android'
+apply plugin: 'io.fabric'
 
 android {
+
+    //Enable dual architecture and universal apk build
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a'
+            universalApk true
+        }
+    }
     compileSdkVersion 26
+    buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "morris.com.voucher"
+         applicationId "morris.com.voucher"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
     buildTypes {
+                ext.enableCrashlytics = false
+                ext.alwaysUpdateBuildId = false
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
         }
+    }
+
+    dexOptions {
+        javaMaxHeapSize "2048M"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-annotations:27.1.1'
-    implementation 'com.android.support:design:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+repositories {
+    // these are the repositories where to look for libs and runtime
+    mavenCentral()
+    maven { url 'https://maven.fabric.io/public' }
 }
+
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations' exclude group: 'com.google.code.findbugs'
+    })
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.jaredrummler:material-spinner:1.1.0'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'com.android.support:support-annotations:27.1.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.android.support:multidex:1.0.0'
+    // ViewModel and LiveData
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    // rxjava2 to use the Observables stuff
+    implementation 'com.apollographql.android:converter-pojo:0.1.0'
+    //converts retrofit responses to pojos (ApolloConverterFactory)
+    implementation('com.jakewharton:butterknife:8.8.1') {
+        exclude group: 'com.android.support'
+    }
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    implementation('android.arch.persistence.room:runtime:1.1.1') {
+        exclude group: 'com.android.support'
+    }
+    annotationProcessor('android.arch.persistence.room:compiler:1.1.1') {
+        exclude group: 'com.android.support'
+    }
+    // Shared Preferences library
+    implementation('com.android.support:preference-v7:27.1.0') {
+        exclude group: 'com.android.support'
+    }
+    implementation('com.google.android.gms:play-services-maps:15.0.1') {
+        exclude group: 'com.android.support'
+    }
+}
+
+apply plugin: 'com.google.gms.google-services'
