--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.apollographql.apollo:gradle-plugin:0.4.1'
+        classpath 'com.google.gms:google-services:4.0.2'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,7 +21,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
+
 }
 
 task clean(type: Delete) {
